# kinect-test

./: .gitignore  CMakeLists.txt  README.md  main.cpp
